# bunker-search

./: .gitignore  Cargo.toml  README.md  config.example.toml  index.html  run_search_test.sh
src/: config.rs  indexer.rs  ingest.rs  kiwix.rs  main.rs  ollama.rs  search.rs  server.rs
src/static/: bunker-search.js
