[package]
name = "bunker-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
content_inspector = "0.2"
html2text = "0.12"
once_cell = "1"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
